k8s/telegram-bot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-bot
  namespace: wbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp-bot
  template:
    metadata:
      labels:
        app: whatsapp-bot
    spec:
      containers:
        - name: whatsapp-bot
          image: ghcr.io/niksipeikin/whatsapp-bot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
