k8s/web-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: wbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: ghcr.io/niksipeikin/web-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
