k8s/telegram-bot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-bot
  namespace: wbot
spec:
  selector:
    app: whatsapp-bot
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
