k8s/web-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: wbot
spec:
  selector:
    app: web-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
